# CTO

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
cheri-ml/: api.py  serve_model.py  serve_model_simple.py
opencto/: MQTT-ARCHITECTURE.md  MQTT-IMPLEMENTATION-COMPLETE.md  QUICKSTART-MQTT.md  README.md  SESSION-2026-02-22-MQTT-COMPLETE.md  VISION.md
opencto/Sheri-ML/: RAG-AUTH-DOCS-INDEXED.md  SHERIML-AUTH-PHASE1-COMPLETE.md  SHERIML-COMPLETE-SUMMARY.md  SHERIML-DEPLOYMENT-COMPLETE.md  SHERIML-v0.3.0-SUMMARY.md  cli-auth-patterns-quick-reference.md  cli-auth-research.md  heysalad-cli-auth-implementation-plan.md  start-opencto-swarm.sh  test-mqtt-agents.sh
opencto/Sheri-ML/heysalad-sheri-auth/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
opencto/Sheri-ML/heysalad-sheri-auth/src/: index.ts
opencto/Sheri-ML/sheri-ml-cli/: .env.example  .gitignore  .npmignore  ARCHITECTURE-AUTH.md  BRAND.md  BUILD_SUMMARY.md  CHANGELOG.md  CHANGES.md  CONVERSATIONAL-AI-FIX.md  NEXT_STEPS.md  QUICK_START.md  README.md  RPI-DEPLOY.md  STATUS.md  TEST_LOG.md  deploy-to-rpi.sh  package-lock.json  package.json  test-cli.sh
opencto/Sheri-ML/sheri-ml-cli/.claude/: settings.local.json
sheri-ml/: FINAL_STATUS.md  GEMINI_INTEGRATION_COMPLETE.md  STATUS.md  SUMMARY.md  example-config.toml  test-gemini-3.1.sh  test-gemini.sh
sheri-ml/codex-rs/: Cargo.toml
sheri-ml/codex-rs/core/src/: lib.rs  (+1 more)
sheri-ml/codex-rs/gemini/: BUILD.bazel  Cargo.toml  README.md
sheri-ml/codex-rs/gemini/src/: client.rs  lib.rs
sheri-ml/docs/: gemini-provider-setup.md
(+26 files in other folders)
