[package]
name = "codex-gemini"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Google Gemini provider for Codex/Sheri ML"

[dependencies]
codex-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
url = "2.5"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
